--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 sqlparser = "0.48.0"
 rayon = "1.10.0"
+
+[[test]]
+name = "integration_tests"
+path = "src/tests/integration_tests.rs"
