added more aggregate functions and benchmarks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 sqlparser = "0.48.0"
 rayon = "1.10.0"
 criterion = "0.5.1"
+rand = "0.8.5"
 
 [[test]]
 name = "integration_tests"
